--- a/app/views/temperatures/index.html.erb
+++ b/app/views/temperatures/index.html.erb
@@ -16,6 +16,10 @@
   </tbody>
 </table>
 
+<div>
+        <%=@temperatures.first[0].class%>
+</div>
+
 
 <div id="container" style="width:100%; height:400px;"></div>
 <script>
